python-ttystatus (0.36+git-1) UNRELEASED; urgency=medium

  * New upstream version.

 -- Lars Wirzenius <liw@liw.fi>  Fri, 10 Nov 2017 23:03:54 +0100

python-ttystatus (0.36-1) unstable; urgency=medium

  * New upstream version.
  * Added Python3 support, and a python3-ttystatus package.

 -- Lars Wirzenius <liw@liw.fi>  Fri, 10 Nov 2017 23:03:52 +0100

python-ttystatus (0.35-1) unstable; urgency=medium

  * New upstream version.

 -- Lars Wirzenius <liw@liw.fi>  Sat, 03 Jun 2017 22:42:27 +0300

python-ttystatus (0.34-1) unstable; urgency=medium

  * New upstream version.
    - Fixes FTBFS (Closes: #844235)
  * debian/control: Require Python 2.7.

 -- Lars Wirzenius <liw@liw.fi>  Mon, 26 Dec 2016 10:39:34 +0200

python-ttystatus (0.32-1) unstable; urgency=medium

  * New upstream version.

 -- Lars Wirzenius <liw@liw.fi>  Sat, 09 Jan 2016 11:55:02 +0200

python-ttystatus (0.31-1) unstable; urgency=medium

  * New upstream version.

 -- Lars Wirzenius <liw@liw.fi>  Sat, 09 Jan 2016 11:42:55 +0200

python-ttystatus (0.30-1) unstable; urgency=medium

  * New upstream version.

 -- Lars Wirzenius <liw@liw.fi>  Sat, 17 Oct 2015 19:04:52 +0300

python-ttystatus (0.29-1) unstable; urgency=medium

  * New upstream version.

 -- Lars Wirzenius <liw@liw.fi>  Sun, 11 Oct 2015 19:08:24 +0300

python-ttystatus (0.28-1) unstable; urgency=medium

  * New upstream version.

 -- Lars Wirzenius <liw@liw.fi>  Sat, 10 Oct 2015 16:18:36 +0300

python-ttystatus (0.27-1) unstable; urgency=medium

  * New upstream version.

 -- Lars Wirzenius <liw@liw.fi>  Sat, 10 Oct 2015 12:04:59 +0300

python-ttystatus (0.26-1) unstable; urgency=medium

  * New upstream version.

 -- Lars Wirzenius <liw@liw.fi>  Tue, 06 Oct 2015 12:29:11 +0300

python-ttystatus (0.25-1) unstable; urgency=medium

  * New upstream version.

 -- Lars Wirzenius <liw@liw.fi>  Mon, 05 Oct 2015 22:37:01 +0300

python-ttystatus (0.24.1-1) unstable; urgency=medium

  * New upstream version.
