@@ -1,6 +1,7 @@
 python-ttystatus (0.36+git-1) UNRELEASED; urgency=medium
 
   * New upstream version.
+  * Fix debian/rules.
 
  -- Lars Wirzenius <liw@liw.fi>  Fri, 10 Nov 2017 23:03:54 +0100
 
